bugfix: fix star button alignment in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -651,7 +651,7 @@ html, body {
 
 .star-button-holder {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 
